GET all characters from a specific house
